force-app/main/default/objects/LEXRegistration_PageProperties__mdt/LEXRegistration_PageProperties__mdt.object-meta.xml
<CustomObject>
    <label>LEXRegistration_PageProperties</label>
    <pluralLabel>LEXRegistration_PageProperties</pluralLabel>
</CustomObject>