force-app/main/default/objects/LEXRegistration_PageProperties__mdt/fields/Account_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Account_Field_Set__c</fullName>
    <inlineHelpText>Controls the Field Set that defines the Fields that will display and whether or not they are required.</inlineHelpText>
    <label>Account Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>