force-app/main/default/objects/LEXRegistration_PageProperties__mdt/fields/Section_Header__c.field-meta.xml
<CustomField>
    <fullName>Section_Header__c</fullName>
    <inlineHelpText>Controls the Text that is displayed in the Header for the Section.</inlineHelpText>
    <label>Section Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>