force-app/main/default/objects/LEXRegistration_PageProperties__mdt/fields/Sub_Header__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header__c</fullName>
    <inlineHelpText>Controls the Text that is displayed in the Sub Header for the Section.</inlineHelpText>
    <label>Sub Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>