force-app/main/default/objects/LEXRegistration_PageProperties__mdt/listViews/All_Page_Properties.listView-meta.xml
<ListView>
    <fullName>All_Page_Properties</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>Section_Header__c</columns>
    <columns>Section_Order__c</columns>
    <columns>Sub_Header__c</columns>
    <columns>Account_Field_Set__c</columns>
    <columns>Contact_Field_Set__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Page Properties</label>
</ListView>